docs: prepare 'examples' to demonstrate usage of the PoC/library

--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "/bin"
   ],
   "directories": {
-    "doc": "doc"
+    "doc": "doc",
+    "example": "examples"
   },
   "scripts": {
     "test": "jest --watch --onlyChanged",
