feat(poc): improve PoC library and application with Typescript code

--- a/package.json
+++ b/package.json
@@ -61,10 +61,8 @@
     "test": "jest --watch --onlyChanged",
     "test:prod": "jest --silent --all",
     "coverage": "jest --all --coverage",
-
     "start": "ts-node --project tsconfig.common.json src/application.ts -d",
     "node": "node bin/application.js",
-
     "watch": "tsc -p tsconfig.types.json --watch",
     "build:bin": "tsc -p tsconfig.bin.json",
     "build:cjs": "tsc -p tsconfig.cjs.json",
@@ -74,10 +72,8 @@
     "prod": "npm run cleanup && npm run build && npm run copyts && npm run test:prod",
     "checkpkg": "pkgfiles",
     "prepublishOnly": "npm run prod",
-
     "local:publish": "npm run produce && npm link",
     "local:unpublish": "npm unlink && npm run cleanup:nodemodules && npm install",
-
     "cleanup": "rimraf ./lib ./bin ./coverage",
     "cleanup:nodemodules": "npx rimraf ./node_modules",
     "copyts": "copyfiles -u 2 \"src/lib/**/*\" -e \"**/*.spec.ts\" lib/ts"
@@ -96,6 +92,7 @@
     "typescript": "^3.9.5"
   },
   "dependencies": {
+    "chalk": "^4.0.0",
     "tslib": "^2.0.0"
   }
 }
